# audio-mixer

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  cbindgen.toml  run_sanitizers.sh  run_tests.sh
.github/workflows/: test.yml
benches/: benchmark.rs
capi/: Cargo.toml  cbindgen.toml  run_sanitizers.sh
capi/src/: lib.rs
core/: Cargo.toml  run_sanitizers.sh
core/src/: channel.rs
examples/: Makefile  audio_mixer.c  audio_mixer.rs
mixer-capi/: Cargo.toml  build.rs
mixer-capi/examples/: Makefile  audio_mixer.c
mixer-capi/src/: lib.rs
src/: capi.rs  channel.rs  coefficient.rs  lib.rs  main.rs
