[package]
name = "audio-mixer"
description = "Mixing audio by the input and output channel layout"
version = "0.1.2"
authors = ["Chun-Min Chang <chun.m.chang@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/ChunMinChang/audio-mixer"
keywords = ["audio", "mixer", "mixing"]
categories = ["multimedia::audio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "ChunMinChang/audio-mixer" }

[dependencies]
bitflags = "1.2"

[dev-dependencies]
criterion = "0.3"
float-cmp = "0.6"

[[bench]]
name = "benchmark"
harness = false

[features]
capi = ["cbindgen"]

[build-dependencies]
cbindgen = { version = "0.13", optional = true }
