[package]
name = "audio-mixer-capi"
description = "Mixing audio by the input and output channel layout"
version = "0.1.0"
authors = ["Chun-Min Chang <chun.m.chang@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/ChunMinChang/audio-mixer"
keywords = ["audio", "mixer", "mixing"]
categories = ["multimedia::audio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[badges]
travis-ci = { repository = "ChunMinChang/audio-mixer" }

[dependencies]
audio-mixer = { version = "0.1.2", path = "../core" }

[build-dependencies]
cbindgen = "0.13"
